hphp/hack/test/typecheck/like_types/dynamic_coercion/like_decl_types/tlike.php.like_types.exp
File "tlike.php", line 11, characters 10-11:
Invalid return type (Typing[4110])
File "tlike.php", line 10, characters 28-30:
Expected ~int because it is an unenforceable type
File "tlike.php", line 10, characters 13-20:
But got arraykey
